--- a/awk.1
+++ b/awk.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: awk.1,v 1.41 2014/03/17 21:48:51 jmc Exp $
+.\"	$OpenBSD: awk.1,v 1.43 2015/01/16 15:53:24 schwarze Exp $
 .\"
 .\" Copyright (C) Lucent Technologies 1997
 .\" All Rights Reserved
@@ -22,7 +22,7 @@
 .\" ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF
 .\" THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: March 17 2014 $
+.Dd $Mdocdate: January 16 2015 $
 .Dt AWK 1
 .Os
 .Sh NAME
@@ -199,19 +199,11 @@ An action is a sequence of statements.
 A statement can be one of the following:
 .Pp
 .Bl -tag -width Ds -offset indent -compact
-.It Xo Ic if ( Ar expression ) Ar statement
-.Op Ic else Ar statement
-.Xc
-.It Ic while ( Ar expression ) Ar statement
-.It Xo Ic for
-.No ( Ar expression ; expression ; expression ) statement
-.Xc
-.It Xo Ic for
-.No ( Ar var Ic in Ar array ) statement
-.Xc
-.It Xo Ic do
-.Ar statement Ic while ( Ar expression )
-.Xc
+.It Ic if Ar ( expression ) Ar statement Op Ic else Ar statement
+.It Ic while Ar ( expression ) Ar statement
+.It Ic for Ar ( expression ; expression ; expression ) statement
+.It Ic for Ar ( var Ic in Ar array ) statement
+.It Ic do Ar statement Ic while Ar ( expression )
 .It Ic break
 .It Ic continue
 .It Xo Ic {
@@ -752,6 +744,7 @@ Print an error message to standard error:
 { print "error!" > "/dev/stderr" }
 .Ed
 .Sh SEE ALSO
+.Xr cut 1 ,
 .Xr lex 1 ,
 .Xr printf 1 ,
 .Xr sed 1 ,
